Fix search with date in Payment Employee